# GramsReadout

./: .gitmodules  CMakeLists.txt  CMakeLists.txt.org  README.md  env_check.sh  env_setup.sh  main.cpp  server.cpp
config/: README.md  config_schema.json  config_validator.py  test.json  test_1.json  test_4025.json
daemon/: README.md  daq_orchestrator.cpp  daq_orchestrator.service  data_monitor.cpp  data_monitor.service  orchestrator.cpp  orchestrator.service  tof_daq.cpp  tof_daq.service  tpc_daq.cpp  tpc_daq.service
firmware/trigger/: system_control_11112025_inv_input_delay25501.pof
firmware/xmit/: readcontrol_110601_v3_play_header_hist_l1block_9_21_2018.rbf  readcontrol_11601_v3_play_header_6_21_2013.rbf
lib/folly/: ProducerConsumerQueue.h
lib/monitoring/: data_monitor.cpp  data_monitor.h  metrics_pub.py
lib/pcie_driver/: CMakeLists.txt  README.md  gramsreadout_lib.c  gramsreadout_lib.h  pcie_interface.cpp  pcie_interface.h
scripts/: env_check.sh  setup_windriver.sh
src/: configure_hardware.cpp  configure_hardware.h  controller.cpp  controller.h  pcie_control.cpp  pcie_control.h
src/control/: controller.cpp  controller.h
src/data/: data_handler.cpp  data_handler.h
src/hardware/: charge_fem.cpp  charge_fem.h  configure_hardware.cpp  configure_hardware.h  dma_control.cpp  dma_control.h  hardware_constants.h  hardware_control.cpp  hardware_control.h  hardware_device.cpp  hardware_device.h  light_fem.cpp  light_fem.h  pcie_control.cpp  pcie_control.h  trigger_control.cpp  trigger_control.h  xmit_control.cpp  xmit_control.h
src/networking/: tcp_protocol.cpp  tcp_protocol.h  tcp_server.cpp  tcp_server.h
src/status/: status.cpp  status.h
tests/: pcie_read_write.cpp  server.cpp  tcp_client.cpp
